--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <button class="btn btn-outline-success" type="submit" id="botao-busca"><i class="fa-solid fa-magnifying-glass"></i></button>             
                 </form>  *@
 
-            <img src="~/css/RGR3.png" alt="" class="logo">
+            <img src="~/css/rgr-otimizado.png" alt="" class="logo">
             <table>
                 <tr>
                     <td><img class="user" src="~/css/user-bege.png" ></td>
