--- a/Views/Outros/Index.cshtml
+++ b/Views/Outros/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MVC.Models.Porta>
+@model IEnumerable<MVC.Models.Outros>
 @{
     ViewData["Title"] = "Index";
 }
@@ -71,18 +71,6 @@
                 else if(item.Id == 3)
                 {
                    <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a> 
-                }
-                else if(item.Id == 4)
-                {
-                   <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a> 
-                }
-                else if(item.Id == 5)
-                {
-                   <a><img class="Imagem_Porta" src="~/css/Porta.jpeg" width="200px"></a> 
-                }
-                else if(item.Id == 6)
-                {
-                   <a><img class="Imagem_Porta" src="~/css/PortaNigga.jpeg" width="200px"></a> 
                 }
 
             </div>
