--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,4 +17,96 @@
 <body>
     <header>
     </header>
+
+    <div class="container">
+
+        <div class="container">
+
+        <div class="card" id="card_carrinhos">
+            <div class="card__left">
+            <span>
+                Porta
+            </span>
+            <h2>
+                Teste
+            </h2>
+            <span id="preco">
+                R$ 100,00
+            </span>
+            <select>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            
+            <button type="button" class="btn btn-success botao-comprar">Adicionar ao carrinho</button>
+            </div>
+
+            <div class="card__right">
+
+                <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a>
+
+            </div>
+        </div>
+
+        <div class="card" id="card_carrinhos">
+            <div class="card__left">
+            <span>
+                Porta
+            </span>
+            <h2>
+                Teste
+            </h2>
+            <span id="preco">
+                R$ 100,00
+            </span>
+            <select>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            
+            <button type="button" class="btn btn-success botao-comprar">Adicionar ao carrinho</button>
+            </div>
+
+            <div class="card__right">
+
+                <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a>
+
+            </div>
+        </div>
+
+        <div class="card" id="card_carrinhos">
+            <div class="card__left">
+            <span>
+                Porta
+            </span>
+            <h2>
+                Teste
+            </h2>
+            <span id="preco">
+                R$ 100,00
+            </span>
+            <select>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            
+            <button type="button" class="btn btn-success botao-comprar">Adicionar ao carrinho</button>
+            </div>
+
+            <div class="card__right">
+
+                <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a>
+
+            </div>
+        </div>
+    </div>
 </body>
