--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,12 +36,12 @@
             <img src="~/css/rgr-otimizado.png" alt="" class="logo">
             <table>
                 <tr>
-                    <td><img class="user" src="~/css/user-bege.png" ></td>
+                    <td><a href="/Usuario"><img class="user" src="~/css/user-bege.png" ></a></td>
                     <td></td>
                     <td><a href="/Carrinho"><img class="loupe-blue" src="~/css/cart-bege.png"></a></td>
                     </tr>
                 <tr>
-                        <td id="sub">Entrar</td>
+                        <td id="sub"><a id="Texto_Carrinho" href="/Usuario">Entrar</a></td>
                         <td></td>
                         <td id="sub"><a id="Texto_Carrinho" href="/Carrinho">Carrinho</a></td>      
                 </tr>       
@@ -101,10 +101,10 @@
             </div>
             <ul class="nav-list" >
                 <li><a href="/Porta">Portas</a></li>
-                <li><a href="/">Guarnições</a></li>
-                <li><a href="/">Janelas</a></li>
-                <li><a href="/">Fechaduras</a></li>
-                <li><a href="/">Outros</a></li>
+                <li><a href="/Guarnicao">Guarnições</a></li>
+                <li><a href="/Janela">Janelas</a></li>
+                <li><a href="/Fechadura">Fechaduras</a></li>
+                <li><a href="/Outros">Outros</a></li>
 
             </ul>
         </nav>
@@ -112,7 +112,7 @@
         
     
   
-    <div class="container">
+    </div>
        
             @RenderBody()
         
