--- a/Views/Usuario/Cadastrar.cshtml
+++ b/Views/Usuario/Cadastrar.cshtml
@@ -4,6 +4,24 @@
     //Layout = null;
 }
 
+<style>
+    p{
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .jumbotron{
+        width: 100%;
+        height: 50%;
+        background: rgba(232, 218, 191, 0.9);
+    }
+
+    table{
+        width: 100%;
+        text-align: center;
+    }
+</style>  
+
 <div class="container container-xl">
     <div class="jumbotron">
         <form class="container" asp-controller="Usuario" asp-action="Cadastrar" method="post">
