--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -3,6 +3,24 @@
     ViewData["Title"] = "Tela de login";
 }
 
+<style>
+    p{
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .jumbotron{
+        width: 100%;
+        height: 50%;
+        background: rgba(232, 218, 191, 0.9);
+    }
+
+    table{
+        width: 100%;
+        text-align: center;
+    }
+</style>  
+
 <div class="container container-xl">
     <div class="jumbotron">
         <center><h2 id="listagemTitulo">Faça login</h2></center>
