--- a/Views/Admin/Fechadura.cshtml
+++ b/Views/Admin/Fechadura.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MVC.Models.Porta>;
+@model IEnumerable<MVC.Models.Fechadura>;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Admin Page - Porta";
@@ -99,7 +99,7 @@
     </header>
 
     <div class="container">
-        <a class="btn btn-primary" style="float: right;margin-top: 5px;margin-right: 5px;" asp-controller="admin" asp-action="AdicionarPorta">Adicionar</a>
+        <a class="btn btn-primary" style="float: right;margin-top: 5px;margin-right: 5px;" asp-controller="admin" asp-action="AdicionarFechadura">Adicionar</a>
         <div class="jumbotron">
             <table class="table">
                 <thead>
@@ -111,6 +111,7 @@
                         <td>Preço</td>
                         <td>Descrição</td>
                         <td>Tipo</td>
+                        <td>Tipo de cômodo</td>
                         <td>Estoque</td>
                         <td>Editar</td>
                         <td>Excluir</td>
@@ -121,17 +122,19 @@
                     {
                     <tr>
                         <td>@Html.DisplayFor(Model => item.Id)</td>
-                        <td>@Html.DisplayFor(Model => item.Nome)</td>
-                        <td>@Html.DisplayFor(Model => item.Medida)</td>
-                        <td>@Html.DisplayFor(Model => item.Cor)</td>
-                        <td>@Html.DisplayFor(Model => item.Preco)</td>
-                        <td>@Html.DisplayFor(Model => item.Descricao)</td>
-                        <td>@Html.DisplayFor(Model => item.Tipo)</td>
-                        <td>@Html.DisplayFor(Model => item.Quantidade)</td>
+                        <td>@Html.DisplayFor(Model => item.Nome)Nome1</td>
+                        <td>@Html.DisplayFor(Model => item.Medida)Medida1</td>
+                        <td>@Html.DisplayFor(Model => item.Cor)Cor1</td>
+                        <td>@Html.DisplayFor(Model => item.Valor)Preço1</td>
+                        <td>@Html.DisplayFor(Model => item.Descricao)Descrição1</td>
+                        <td>@Html.DisplayFor(Model => item.Tipo)Tipo1</td>
+                        <td>@Html.DisplayFor(Model => item.TipoComodo)Tipo de cômodo</td>
+                        <td>@Html.DisplayFor(Model => item.Quantidade)Quantidade1</td>
                         <td scope="col"><a class="btn btn-primary" asp-controller="Admin" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o" aria-hidden="true" alt="Editar"></i></a></td>
-                        <td scope="col"><a class="btn btn-danger" asp-controller="Porta" asp-action="Excluir" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
+                        <td scope="col"><a class="btn btn-danger" asp-controller="Fechadura" asp-action="Excluir" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
                     </tr>
                     }
+                    
                 </tbody>
             </table>
         </div>
