--- a/Views/Admin/Janela.cshtml
+++ b/Views/Admin/Janela.cshtml
@@ -1,5 +1,4 @@
-@model IEnumerable<MVC.Models.Porta>;
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model IEnumerable<MVC.Models.Janela>;
 @{
     ViewData["Title"] = "Admin Page - Porta";
     Layout = null;
@@ -99,7 +98,7 @@
     </header>
 
     <div class="container">
-        <a class="btn btn-primary" style="float: right;margin-top: 5px;margin-right: 5px;" asp-controller="admin" asp-action="AdicionarPorta">Adicionar</a>
+        <a class="btn btn-primary" style="float: right;margin-top: 5px;margin-right: 5px;" asp-controller="admin" asp-action="AdicionarJanela">Adicionar</a>
         <div class="jumbotron">
             <table class="table">
                 <thead>
@@ -110,10 +109,8 @@
                         <td>Cor</td>
                         <td>Preço</td>
                         <td>Descrição</td>
-                        <td>Tipo</td>
+                        <td>Quantidade de folhas</td>
                         <td>Estoque</td>
-                        <td>Editar</td>
-                        <td>Excluir</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -124,12 +121,12 @@
                         <td>@Html.DisplayFor(Model => item.Nome)</td>
                         <td>@Html.DisplayFor(Model => item.Medida)</td>
                         <td>@Html.DisplayFor(Model => item.Cor)</td>
-                        <td>@Html.DisplayFor(Model => item.Preco)</td>
+                        <td>@Html.DisplayFor(Model => item.Valor)</td>
                         <td>@Html.DisplayFor(Model => item.Descricao)</td>
-                        <td>@Html.DisplayFor(Model => item.Tipo)</td>
+                        <td>@Html.DisplayFor(Model => item.QtdFolhas)</td>
                         <td>@Html.DisplayFor(Model => item.Quantidade)</td>
                         <td scope="col"><a class="btn btn-primary" asp-controller="Admin" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o" aria-hidden="true" alt="Editar"></i></a></td>
-                        <td scope="col"><a class="btn btn-danger" asp-controller="Porta" asp-action="Excluir" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
+                        <td scope="col"><a class="btn btn-danger" asp-controller="Fechadura" asp-action="Excluir" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
                     </tr>
                     }
                 </tbody>
