--- a/Views/Carrinho/Index.cshtml
+++ b/Views/Carrinho/Index.cshtml
@@ -1,36 +1,17 @@
-@model IEnumerable<Carrinho>;
+@model IEnumerable<MVC.Models.Carrinho>;
 @{
     ViewData["Title"] = "Listagem de Pedidos";
     //Layout = null;
-    var totalPagar = 0;
 }
 
-<style>
-    p{
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .jumbotron{
-        width: 100%;
-        height: 50%;
-        background: rgba(232, 218, 191, 0.9);
-    }
-
-    table{
-        width: 100%;
-        text-align: center;
-    }
-</style>       
-
 <div class="container container-xl">
-
     <div class="jumbotron">
         <center><h2 id="listagemTitulo">Seus Pedidos</h2></center>
-        <table>
+        <div><a class="btn btn-primary" asp-controller="Carrinho" asp-action="Adicionar">Criar novo Pedido</a></div>
+        <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Id do Pedido</th>
+                    <th scope="col">#</th>
                     <th scope="col">Item</th>
                     <th scope="col">Descrição</th>
                     <th scope="col">Quantidade</th>
@@ -40,57 +21,19 @@
                 </tr>
             </thead>
             <tbody>
-
-
                 @foreach (var item in Model)
                 {
-                    totalPagar = totalPagar + (int)@item.precoPedido;
-                <tr>
-                    <td scope="col">@item.Id</td>
-                    <td scope="col">@item.nomePedido</td>
-                    <td scope="col">@item.descricao</td>
-                    <td scope="col">@item.qtdPedido</td>
-                    <td scope="col">@item.precoPedido</td>
-                    <td scope="col"><a class="btn btn-primary">Editar</a></td>
-                    <td scope="col"><a class="btn btn-danger" onclick="cancelaItem(@item.Id)">Cancelar</a></td>
+                    <tr>
+                    <td scope="col">@Html.DisplayFor(Model => item.Id)</td>
+                    <td scope="col">@Html.DisplayFor(Model => item.nomePedido)</td>
+                    <td scope="col">@Html.DisplayFor(Model => item.descricao)</td>
+                    <td scope="col">@Html.DisplayFor(Model => item.qtdPedido)</td>
+                    <td scope="col">@Html.DisplayFor(Model => item.precoPedido)</td>
+                    <td scope="col"><a class="btn btn-primary" asp-controller="Carrinho" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o" aria-hidden="true" alt="Editar"></i></a></td>
+                    <td scope="col"><a class="btn btn-danger" asp-controller="Carrinho" asp-action="Cancelar" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
                 </tr>
                 }
             </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="11"><a class="btn btn-success" onclick="comprarItem(@totalPagar)">Comprar</a></td>
-                </tr>
-            </tfoot>
         </table>
     </div>
 </div>
-
-<script>
-    function cancelaItem(idProduto){
-        debugger;
-    $.ajax({
-        url:"/Carrinho/Deletar",
-        type: 'Put',
-        data:{
-            idProduto
-        },   
-    success: function(result){
-        debugger;
-        window.location.href = "@Url.Action("Index", "Carrinho")";
-    }});
-}
-
-function comprarItem(totalPagar){
-        debugger;
-    $.ajax({
-        url:"/Carrinho/Comprar",
-        type: 'Put',
-        data:{
-            totalPagar
-        },   
-    success: function(result){
-        debugger;
-        window.location.href = "@Url.Action("Comprar", "Carrinho")";
-    }});
-}
-</script>
