--- a/Views/Porta/Index.cshtml
+++ b/Views/Porta/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(model => item.Descricao)
             </h2>
             <span id="preco">
-                R$ @Html.DisplayFor(model => item.Valor)
+                R$ @Html.DisplayFor(model => item.Preco)
             </span>
             <select class="@classeQtd">
                 <option value="1">1</option>
