--- a/Views/Guarnicao/Index.cshtml
+++ b/Views/Guarnicao/Index.cshtml
@@ -36,6 +36,10 @@
             else if(item.Id == 3)
                 classeQtd = "campoQuantidade3";
 
+            else if(item.Id == 4)
+                classeQtd = "campoQuantidade4";
+
+
 
         <div class="card" id="card_carrinhos">
             <div class="card__left">
@@ -66,11 +70,15 @@
                 }
                 else if(item.Id == 2)
                 {
-                    <a><img class="Imagem_Porta" src="~/css/PortaNigga.jpeg" width=></a>                    
+                    <a><img class="Imagem_Porta" src="~/css/GuarnicaoTauari.jpg" width="200px"></a>                    
                 }
                 else if(item.Id == 3)
                 {
-                   <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a> 
+                   <a><img class="Imagem_Porta" src="~/css/GuarnicaoPreta.png" width="200px"></a> 
+                }
+                else if(item.Id == 4)
+                {
+                   <a><img class="Imagem_Porta" src="~/css/GuarnicaoBranca.jpg" width="200px"></a> 
                 }
 
             </div>
@@ -85,7 +93,7 @@
 <script>
     function troca_src(idProduto){
         var tipoTabela = 2;
-        var qtdProdutos = idProduto == 1 ? $(".campoQuantidade").val() : idProduto == 2 ? $(".campoQuantidade2").val() : $(".campoQuantidade3").val();
+        var qtdProdutos = idProduto == 1 ? $(".campoQuantidade").val() : idProduto == 2 ? $(".campoQuantidade2").val() : idProduto == 3 ? $(".campoQuantidade3").val() : $(".campoQuantidade4").val();
 
     $.ajax({
         url:"/Carrinho/SalvarNoCarrinho",
