--- a/Views/Janela/Index.cshtml
+++ b/Views/Janela/Index.cshtml
@@ -1,8 +1,8 @@
-
 @model IEnumerable<MVC.Models.Janela>
 @{
     ViewData["Title"] = "Index";
 }
+
 
 <head>
     <meta charset="utf-8" />
@@ -17,12 +17,7 @@
 
 <body>
     <header>
-        <div class="container">
-
-        <div class="container">
-           
-        </div>
-             
+       
                   
         
     </header>
@@ -30,6 +25,22 @@
     <div class="container">
         @foreach (var item in Model)
         {
+            var classeQtd = "";
+
+            if(item.Id == 1)
+                classeQtd = "campoQuantidade";
+
+            else if(item.Id == 2)
+                classeQtd = "campoQuantidade2";
+
+            else if(item.Id == 3)
+                classeQtd = "campoQuantidade3";
+
+            else if(item.Id == 4)
+                classeQtd = "campoQuantidade4";
+
+
+
         <div class="card" id="card_carrinhos">
             <div class="card__left">
             <span>
@@ -38,34 +49,62 @@
             <h2>
                 @Html.DisplayFor(model => item.Descricao)
             </h2>
-            <span>
+            <span id="preco">
                 R$ @Html.DisplayFor(model => item.Valor)
             </span>
+            <select class="@classeQtd">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
             
-            <button type="button" class="btn btn-success" id="botao-comprar"  onclick(troca_src(1);>Comprar</button>
+            <button type="button" class="btn btn-success botao-comprar" onclick=troca_src(@item.Id)>Adicionar ao carrinho</button>
             </div>
 
             <div class="card__right">
                 @if(item.Id == 1)
                 {
-                    <a><img class="Imagem_Porta" src="~/css/Porta.jpeg" width="200px"></a>
+                    <a><img class="Imagem_Porta" src="~/css/Janela-Vidros.jpg" width="200px"></a>
                 }
                 else if(item.Id == 2)
                 {
-                    <a><img class="Imagem_Porta" src="~/css/PortaNigga.jpeg" width="200px"></a>                    
+                    <a><img class="Imagem_Porta" src="~/css/Janela-Correr.jpg" width="200px"></a>                    
                 }
                 else if(item.Id == 3)
                 {
-                   <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a> 
+                   <a><img class="Imagem_Porta" src="~/css/janela-bandeiras.jpg" width="200px"></a> 
+                }
+                else if(item.Id == 4)
+                {
+                   <a><img class="Imagem_Porta" src="~/css/janela-banheiro.jpg" width="200px"></a> 
                 }
 
             </div>
         </div>
         }
     </div>
+    <br><br><br><br><br><br><br>
+
             
 </body>
 
-<div>
-    
-</div>
+<script>
+    function troca_src(idProduto){
+        var tipoTabela = 3;
+        var qtdProdutos = idProduto == 1 ? $(".campoQuantidade").val() : idProduto == 2 ? $(".campoQuantidade2").val() : idProduto == 3 ? $(".campoQuantidade3").val() : $(".campoQuantidade4").val();
+
+    $.ajax({
+        url:"/Carrinho/SalvarNoCarrinho",
+        type: 'Post',
+        data:{
+            idProduto,
+            tipoTabela,
+            qtdProdutos
+        },   
+    success: function(result){
+        window.location.href = "@Url.Action("Index", "Carrinho")";
+    }});
+}
+</script>
