--- a/Views/Porta/Index.cshtml
+++ b/Views/Porta/Index.cshtml
@@ -36,6 +36,10 @@
             else if(item.Id == 3)
                 classeQtd = "campoQuantidade3";
 
+            else if(item.Id == 4)
+                classeQtd = "campoQuantidade4";
+
+
 
         <div class="card" id="card_carrinhos">
             <div class="card__left">
@@ -72,9 +76,9 @@
                 {
                    <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a> 
                 }
-                else if(item.Id == 4)
+                else if(item.Id == 7)
                 {
-                   <a><img class="Imagem_Porta" src="~/css/PortaMacica.jpeg" width="200px"></a> 
+                   <a><img class="Imagem_Porta" src="~/css/porta_branca.png" width="200px"></a> 
                 }
                 else if(item.Id == 5)
                 {
@@ -97,7 +101,7 @@
 <script>
     function troca_src(idProduto){
         var tipoTabela = 1;
-        var qtdProdutos = idProduto == 1 ? $(".campoQuantidade").val() : idProduto == 2 ? $(".campoQuantidade2").val() : $(".campoQuantidade3").val();
+        var qtdProdutos = idProduto == 1 ? $(".campoQuantidade").val() : idProduto == 2 ? $(".campoQuantidade2").val() : idProduto == 3 ? $(".campoQuantidade3").val() : $(".campoQuantidade4").val();
 
     $.ajax({
         url:"/Carrinho/SalvarNoCarrinho",
