--- a/Views/Admin/Porta.cshtml
+++ b/Views/Admin/Porta.cshtml
@@ -1,5 +1,3 @@
-@model IEnumerable<MVC.Models.Porta>;
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Admin Page - Porta";
     Layout = null;
@@ -8,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RGR</title>
-    
+
     <link rel="stylesheet" href="../css/_Main.css"/> 
     <link rel="stylesheet" href="~/MVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -29,7 +27,6 @@
         {
             border-bottom: 1px solid white;
         }
-
         td
         {
             color: White;
@@ -41,7 +38,7 @@
 <body>
     <header>
         <div id="icones">
-                    
+
                     <a asp-controller="Usuario" asp-action="Index"><i class="fa-solid fa-user fa-3x" id="usuarioIcon"></i></a>
                     <a asp-controller="Carrinho" asp-action="Index"><i class="fa-solid fa-cart-shopping fa-3x" id="carrinhoIcon"></i></a>
                 </div>
@@ -50,11 +47,11 @@
                     <input class="barra" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit" id="botao-busca">Search</button> 
 
-                    
+
                 </form>
 
         <div class="container">
-                
+
 
         </div>
 
@@ -64,10 +61,10 @@
 
 
         <div class="container">
-           
+
         </div>
-             
-                  
+
+
         <nav class="navbar navbar-expand-sm  navbar-light  mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RGR</a>
@@ -84,13 +81,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Contatos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Porta">Portas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Portas">Portas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Janela">Janelas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Janelas">Janelas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Fechadura">Fechaduras</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Fechaduras">Fechaduras</a>
                         </li>
                     </ul>
                 </div>                   
@@ -112,26 +109,39 @@
                         <td>Descrição</td>
                         <td>Tipo</td>
                         <td>Estoque</td>
-                        <td>Editar</td>
-                        <td>Excluir</td>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
-                    {
                     <tr>
-                        <td>@Html.DisplayFor(Model => item.Id)</td>
-                        <td>@Html.DisplayFor(Model => item.Nome)</td>
-                        <td>@Html.DisplayFor(Model => item.Medida)</td>
-                        <td>@Html.DisplayFor(Model => item.Cor)</td>
-                        <td>@Html.DisplayFor(Model => item.Preco)</td>
-                        <td>@Html.DisplayFor(Model => item.Descricao)</td>
-                        <td>@Html.DisplayFor(Model => item.Tipo)</td>
-                        <td>@Html.DisplayFor(Model => item.Quantidade)</td>
-                        <td scope="col"><a class="btn btn-primary" asp-controller="Admin" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o" aria-hidden="true" alt="Editar"></i></a></td>
-                        <td scope="col"><a class="btn btn-danger" asp-controller="Porta" asp-action="Excluir" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
+                        <td>1</td>
+                        <td>Nome1</td>
+                        <td>Medida1</td>
+                        <td>Cor1</td>
+                        <td>Preço1</td>
+                        <td>Descrição1</td>
+                        <td>Tipo1</td>
+                        <td>Quantidade1</td>
                     </tr>
-                    }
+                    <tr>
+                        <td>2</td>
+                        <td>Nome2</td>
+                        <td>Medida2</td>
+                        <td>Cor2</td>
+                        <td>Preço2</td>
+                        <td>Descrição2</td>
+                        <td>Tipo2</td>
+                        <td>Quantidade2</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Nome3</td>
+                        <td>Medida3</td>
+                        <td>Cor3</td>
+                        <td>Preço3</td>
+                        <td>Descrição3</td>
+                        <td>Tipo3</td>
+                        <td>Quantidade3</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
