--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -2,30 +2,25 @@
 @{
     ViewData["Title"] = "Tela de login";
 }
-<style>
-        .jumbotron
-        {
-            background-color: rgba(70, 43, 14, 0.8);
-            border-radius: 10px;
-            border-color: white;
-            border-style: solid;
-            border-width: 2px;
-            width: auto;
-            height: auto;
-            color: white;
-            padding: 10px 5px;
-        }
-        
-        table
-        {
-            border-bottom: 1px solid white;
-        }
 
-        td
-        {
-            color: White;
-        }
-</style>
+<style>
+    p{
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .jumbotron{
+        width: 100%;
+        height: 50%;
+        background: rgba(232, 218, 191, 0.9);
+    }
+
+    table{
+        width: 100%;
+        text-align: center;
+    }
+</style>  
+
 <div class="container container-xl">
     <div class="jumbotron">
         <center><h2 id="listagemTitulo">Faça login</h2></center>
@@ -44,7 +39,7 @@
             <button type="submit" class="btn btn-primary">Entrar</button>
         </form>
         <br>
-        
+
         <a class="btn btn-primary" asp-controller="Usuario" asp-action="Cadastrar">Criar conta</a>
     </div>
 </div>
