--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
                 <li><a href="/Porta">Portas</a></li>
                 <li><a href="/Guarnicao">Guarnições</a></li>
                 <li><a href="/Janela">Janelas</a></li>
-                <li><a href="/Fechadura">Fechaduras</a></li>
+                <li><a href="/Fechadura/Index">Fechaduras</a></li>
                 <li><a href="/Outros">Outros</a></li>
 
             </ul>
