--- a/Views/Admin/Fechadura.cshtml
+++ b/Views/Admin/Fechadura.cshtml
@@ -1,7 +1,7 @@
+@model IEnumerable<MVC.Models.Fechadura>;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
 @{
-    ViewData["Title"] = "Admin Page";
+    ViewData["Title"] = "Admin Page - Porta";
     Layout = null;
 }
 <head>
@@ -16,10 +16,22 @@
     <style>
         .jumbotron
         {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 2%;
+            background-color: rgba(70, 43, 14, 0.8);
+            border-radius: 10px;
+            border-color: white;
+            border-style: solid;
+            border-width: 2px;
             width: auto;
             height: 100%;
+        }
+        
+        table
+        {
+            border-bottom: 1px solid white;
+        }
+        td
+        {
+            color: White;
         }
     </style>
 </head>
@@ -86,8 +98,38 @@
     </header>
 
     <div class="container">
+        <a class="btn btn-primary" style="float: right;margin-top: 5px;margin-right: 5px;" asp-controller="admin" asp-action="AdicionarFechadura">Adicionar</a>
         <div class="jumbotron">
-            <header><center><h1>Bem vindo Administrador</h1></center></header>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td>Id</td>
+                        <td>Nome</td>
+                        <td>Preço</td>
+                        <td>Descrição</td>
+                        <td>Tipo de cômodo</td>
+                        <td>Estoque</td>
+                        <td>Editar</td>
+                        <td>Excluir</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                    <tr>
+                        <td>@Html.DisplayFor(Model => item.Id)</td>
+                        <td>@Html.DisplayFor(Model => item.Nome)Nome1</td>
+                        <td>@Html.DisplayFor(Model => item.Valor)Preço1</td>
+                        <td>@Html.DisplayFor(Model => item.Descricao)Descrição1</td>
+                        <td>@Html.DisplayFor(Model => item.TipoComodo)Tipo de cômodo</td>
+                        <td>@Html.DisplayFor(Model => item.Quantidade)Quantidade1</td>
+                        <td scope="col"><a class="btn btn-primary" asp-controller="Admin" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o" aria-hidden="true" alt="Editar"></i></a></td>
+                        <td scope="col"><a class="btn btn-danger" asp-controller="Fechadura" asp-action="Excluir" asp-route-id="@item.Id"><i class="fa fa-ban" aria-hidden="true"></i></a></td>
+                    </tr>
+                    }
+
+                </tbody>
+            </table>
         </div>
     </div>
 </body>
