--- a/Views/Admin/Porta.cshtml
+++ b/Views/Admin/Porta.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<MVC.Models.Porta>;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Admin Page - Porta";
     Layout = null;
