--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -1,45 +1,39 @@
 @model MVC.Models.Login;
 @{
     ViewData["Title"] = "Tela de login";
+    Layout = null;
 }
 
-<style>
-    p{
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Login</title>
 
-    .jumbotron{
-        width: 100%;
-        height: 50%;
-        background: rgba(232, 218, 191, 0.9);
-    }
 
-    table{
-        width: 100%;
-        text-align: center;
-    }
-</style>  
 
-<div class="container container-xl">
-    <div class="jumbotron">
-        <center><h2 id="listagemTitulo">Faça login</h2></center>
-        <form class="container" asp-controller="Usuario" asp-action="Entrar">
-            <div class="form-group" asp-controller="Usuario">
-                <label>Email:</label>
-                <input type="text" asp-for="email" class="form-control">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style_login.css">
+    <script src="https://kit.fontawesome.com/1788d3ed3e.js" crossorigin="anonymous"></script>
+
+</head>
+<body>
+
+
+    <div class="fundo_login">
+        <center><h2>Login</h2></center><br>
+
+
+                <input type="text" asp-for="email" placeholder="Email"><br><br>
                 @Html.ValidationMessageFor(x => x.email)
-            </div>
-            <div class="form-group">
-                <label>Senha:</label>
-                <input type="password" asp-for="senha" class="form-control">
+
+
+                <input type="password" asp-for="senha" placeholder="Senha"><br><br>
                 @Html.ValidationMessageFor(x => x.senha)
-            </div>
 
-            <button type="submit" class="btn btn-primary">Entrar</button>
-        </form>
-        <br>
+                <button type="submit">Entrar</button>
 
-        <a class="btn btn-primary" asp-controller="Usuario" asp-action="Cadastrar">Criar conta</a>
-    </div>
-</div>
+
+    </div><br>
+    <div>
+    <h3>Ainda não possuí um cadastro ? Clique aqui</h3></div>
+</body>
