--- a/Views/Carrinho/Index.cshtml
+++ b/Views/Carrinho/Index.cshtml
@@ -35,7 +35,6 @@
                     <th scope="col">Descrição</th>
                     <th scope="col">Quantidade</th>
                     <th scope="col">Preço</th>
-                    <th scope="col">Editar</th>
                     <th scope="col">Cancelar Item</th>
                 </tr>
             </thead>
@@ -44,14 +43,13 @@
 
                 @foreach (var item in Model)
                 {
-                    totalPagar = totalPagar + (int)@item.precoPedido;
+                    totalPagar = totalPagar + ((int)@item.precoPedido * @item.qtdPedido);
                 <tr>
                     <td scope="col">@item.Id</td>
                     <td scope="col">@item.nomePedido</td>
                     <td scope="col">@item.descricao</td>
                     <td scope="col">@item.qtdPedido</td>
                     <td scope="col">@item.precoPedido</td>
-                    <td scope="col"><a class="btn btn-primary" asp-controller="Carrinho" asp-action="Editar" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o" aria-hidden="true" alt="Editar"></i></a></td>
                     <td scope="col"><a class="btn btn-danger" onclick="cancelaItem(@item.Id)">Cancelar</a></td>
                 </tr>
                 }
@@ -90,7 +88,7 @@ function comprarItem(totalPagar){
         },   
     success: function(result){
         debugger;
-        window.location.href = "@Url.Action("Comprar", "Carrinho")";
+        window.location.href = "@Url.Action("Comprar", "Carrinho", new { totalPagar = totalPagar })";
     }});
 }
 </script>
